# codec

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  codec.cmake.in  requirements.txt  sonar-project.properties
examples/: CMakeLists.txt
examples/cpp/fileReader/: Makefile  fileReader.cpp
examples/cpp/pcapReader/: Makefile  pcapReader.cpp
examples/cpp/simple/: Makefile  simple.cpp
examples/csharp/: build.sh  example.cs  run.sh
examples/java/: README.md  pom.xml
examples/python/basic/: README.md  example.py
examples/python/file_reader/: file_reader.py
src/: CMakeLists.txt  codec.h  codecFactory.cpp  codecFactory.h  gwCodec.h  gwCodecFactory.h
src/bindings/: CMakeLists.txt  codec.csharp.i  codec.i  codec.java.i  codec.py.i  codecBuffer.h
src/bindings/csharp/: CMakeLists.txt  build.sh  example.cs  run.sh
src/bindings/java/: CMakeLists.txt  Fields.java  build.sh  example.java  run.sh
src/bindings/python/: CMakeLists.txt  example.py
src/common/logger/: CMakeLists.txt  logger.cpp  logger.h  scopeLock.h
src/common/utils/: CMakeLists.txt  common.h  compat.h  compatLinux.cpp  compatWin.cpp  cond.cpp  cond.h  dl.cpp  dl.h  guid.cpp  guid.h  pyutils.pxd  pyutils.pyx  scopeLock.h  utils.cpp  utils.h
src/eti/: CMakeLists.txt  EtiPacketUtils.h
src/eti/eurex/: CMakeLists.txt  eurexCodec.cpp  eurexCodec.h
src/eti/templates/: codec_cpp.py  eti_Cash.xml  eti_Derivatives.xml  gen_codec.py  gen_venue.py  msg_packet_h.py  packet_h.py
src/eti/xetra/: CMakeLists.txt  venue.xml  xetraCodec.cpp  xetraCodec.h
src/eurex/: CMakeLists.txt  eurexCodec.cpp  eurexPacketUtils.h  venue.xml
src/eurex/packets/: eurexAddComplexInstrumentRequestPacket.h  eurexAddComplexInstrumentResponsePacket.h  eurexAddFlexibleInstrumentRequestPacket.h  eurexAddFlexibleInstrumentResponsePacket.h  eurexAffectedOrderRequestsGrpCompPacket.h  eurexAmendBasketTradeRequestPacket.h  eurexApproveBasketTradeRequestPacket.h  eurexApproveTESTradeRequestPacket.h  eurexBasketApproveBroadcastPacket.h  eurexBasketBroadcastPacket.h  eurexBasketDeleteBroadcastPacket.h  eurexBasketExecGrpCompPacket.h  eurexBasketExecutionBroadcastPacket.h  eurexBasketResponsePacket.h  eurexBasketRootPartyGrpCompPacket.h  eurexBasketSideAllocExtBCGrpCompPacket.h  eurexBasketSideAllocExtGrpCompPacket.h  eurexBasketSideAllocGrpCompPacket.h  eurexBroadcastErrorNotificationPacket.h  eurexCLIPDeletionNotificationPacket.h  eurexCLIPExecutionNotificationPacket.h  eurexCLIPResponsePacket.h  eurexCrossRequestAckSideGrpCompPacket.h  eurexCrossRequestPacket.h  eurexCrossRequestResponsePacket.h  eurexCrossRequestSideGrpCompPacket.h  eurexDeleteAllOrderBroadcastPacket.h  eurexDeleteAllOrderNRResponsePacket.h  eurexDeleteAllOrderQuoteEventBroadcastPacket.h  eurexDeleteAllOrderRequestPacket.h  eurexDeleteAllOrderResponsePacket.h  eurexDeleteAllQuoteBroadcastPacket.h  eurexDeleteAllQuoteRequestPacket.h  eurexDeleteAllQuoteResponsePacket.h  eurexDeleteBasketTradeRequestPacket.h  eurexDeleteCLIPRequestPacket.h  eurexDeleteOrderBroadcastPacket.h  eurexDeleteOrderComplexRequestPacket.h  eurexDeleteOrderNRResponsePacket.h  eurexDeleteOrderResponsePacket.h  (+142 more)
src/eurex/templates/: codec_cpp.py  codec_h.py  gen_codec.py  gen_venue.py  msg_packet_h.py  packet_h.py
src/fields/: CMakeLists.txt  MasterFields.xml  fields.cc  fields.h  fields_cc.tmpl  fields_h.tmpl  gen_fields.py  main  main.cpp  parse.py  parse_venue_xml.py
src/fields/templates/: fields_cc.tmpl  fields_h.tmpl  gen_fields  parse_fix_spec  parse_sbe_xml  parse_venue_xml
src/fix/: CMakeLists.txt  fixCodec.cpp  fixCodec.h  fixField.h  fixGroup.h
src/helpers/: CMakeLists.txt  codecHelpers.cpp  codecHelpers.h  gwCodecHelpers.cpp  gwCodecHelpers.h
src/millennium/: CMakeLists.txt  MillenniumPacketUtils.h
src/millennium/borsa/: CMakeLists.txt  borsaitalianaCodec.cpp  borsaitalianaCodec.h  venue.xml
src/millennium/jse/: CMakeLists.txt  jseCodec.cpp  jseCodec.h  venue.xml
src/millennium/lse/: CMakeLists.txt  codec_tmpl.cpp  codec_tmpl.h  gen_codec  gwLseCodec.h  lseCodec.cpp  lseCodec.h  main.cpp  venue.xml
src/millennium/oslo/: CMakeLists.txt  osloCodec.cpp  osloCodec.h  venue.xml
src/millennium/templates/: codec_cpp.t  codec_h.t  gen_codec
src/millennium/turquoise/: CMakeLists.txt  turquoiseCodec.cpp  turquoiseCodec.h  venue.xml
src/optiq/: CMakeLists.txt  optiqCodec.cpp  optiqCodec.h  optiqConstants.h  venue.xml
src/optiq/packets/: CMakeLists.txt  optiqAckPacket.h  optiqAskForQuotePacket.h  optiqCancelReplaceClearingFieldsPacket.h  optiqCancelReplaceFreeTextSectionPacket.h  optiqCancelReplaceNotUsedGroup1Packet.h  optiqCancelReplaceNotUsedGroup2Packet.h  optiqCancelReplaceOptionalFieldsPacket.h  optiqCancelReplacePacket.h  optiqCancelRequestNotUsedGroup1Packet.h  optiqCancelRequestNotUsedGroup2Packet.h  optiqCancelRequestPacket.h  optiqCollarBreachConfirmationPacket.h  optiqDeclarationCancelAndRefusalPacket.h  optiqDeclarationEntryAckPacket.h  optiqDeclarationEntryPacket.h  optiqDeclarationEntryRejectPacket.h  optiqDeclarationNoticePacket.h  optiqFillOptionalFieldsFillPacket.h  optiqFillPacket.h  optiqFillStrategyFieldsPacket.h  optiqFundPriceInputAckPacket.h  optiqFundPriceInputPacket.h  optiqGroupSizeEncoding16Packet.h  optiqGroupSizeEncodingPacket.h  optiqHeartbeatPacket.h  optiqInstrumentSynchronizationListInstrumentSynchronizationSectionPacket.h  optiqInstrumentSynchronizationListPacket.h  optiqKillPacket.h  optiqLiquidityProviderCommandPacket.h  optiqLogonAckPacket.h  optiqLogonPacket.h  optiqLogonRejectPacket.h  optiqLogoutPacket.h  optiqMassCancelAckPacket.h  optiqMassCancelNotUsedGroup1Packet.h  (+34 more)
src/swx/: CMakeLists.txt  swxCodec.cpp  swxCodec.h  swxCodecConstants.h  venue.xml
src/tools/: CMakeLists.txt  checkcodec.cpp  fileReader.cpp
src/xetra/: CMakeLists.txt  venue.xml  xetraCodec.cpp  xetraCodec.h  xetraPacketUtils.h
test/: CMakeLists.txt  main.cpp
test/eurex/: eurexCodecTest.cpp
test/fix/: fixCodecTest.cpp  fixFieldTest.cpp  fixMsg.h  fixRepeatingGroupTest.cpp  test
test/swx/: swxCodecTest.cpp
test/xetra/: xetraCodecTest.cpp
(+665 files in other folders)
